Squash a couple of deprecation warnings
For Java 19+.